Add Docker support, E2E tests, GitHub Actions, and refactor service layer